--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: sgu-database
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: usuarios
+      MYSQL_DATABASE: usuarios2
     ports:
       - "3307:3306"
     networks:
@@ -39,7 +39,7 @@ services:
       SERVER_PORT: 8080
       DB_HOST: database
       DB_PORT: 3306
-      DB_NAME: usuarios
+      DB_NAME: usuarios2
       DB_USER: root
       DB_PASS: root
       SERVER_SSL_ENABLED: true
